--- a/index.html
+++ b/index.html
@@ -55,7 +55,29 @@
             </div>
         </div>
         <div class="colum">
+            <!-- no模块 -->
+            <div class="no">
+                <div class="no-hd">
+                    <ul>
+                        <li>123456</li>
+                        <li>123456</li>
+                    </ul>
+                </div>
+                <div class="no-bd">
+                    <ul>
+                        <li>前端需求人数</li>
+                        <li>市场供应人数</li>
+                    </ul>
+                </div>
 
+            </div>
+            <!-- 地图模块 -->
+            <div class="map">
+                <div class="map1"></div>
+                <div class="map2"></div>
+                <div class="map3"></div>
+                <div class="chart">地图模块</div>
+            </div>
         </div>
         <div class="colum">
             <div class="panel bar">
@@ -76,6 +98,8 @@
         </div>
     </div>
     <script src="js/flexible.js"></script>
+    <script src="js/echarts.min.js"></script>
+    <script src="js/index.js"></script>
 </body>
 
 </html>
