finished bar charts model

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <div class="colum">
             <div class="panel bar">
                 <h2>柱形图-就业行业</h2>
-                <div class="chart">图表</div>
+                <div class="chart"></div>
                 <div class="panel-footer"></div>
             </div>
             <div class="panel line">
@@ -80,17 +80,17 @@
             </div>
         </div>
         <div class="colum">
-            <div class="panel bar">
+            <div class="panel bar2">
+                <h2>柱形图-就业行业</h2>
+                <div class="chart"></div>
+                <div class="panel-footer"></div>
+            </div>
+            <div class="panel line1">
                 <h2>柱形图-就业行业</h2>
                 <div class="chart">图表</div>
                 <div class="panel-footer"></div>
             </div>
-            <div class="panel line">
-                <h2>柱形图-就业行业</h2>
-                <div class="chart">图表</div>
-                <div class="panel-footer"></div>
-            </div>
-            <div class="panel pie">
+            <div class="panel pie1">
                 <h2>柱形图-就业行业</h2>
                 <div class="chart">图表</div>
                 <div class="panel-footer"></div>
