--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="css/index.css">
+    <script src="js/jquery.js"></script>
 </head>
 
 <body>
@@ -38,19 +39,20 @@
     <!-- 页面主体盒子 -->
     <div class="mainbox">
         <div class="colum">
-            <div class="panel bar">
+            <div class="panel bar1">
                 <h2>柱形图-就业行业</h2>
                 <div class="chart"></div>
                 <div class="panel-footer"></div>
             </div>
-            <div class="panel line">
-                <h2>柱形图-就业行业</h2>
-                <div class="chart">图表</div>
+            <div class="panel line1">
+                <h2>折线图-人员变化<a href="javascript:;
+                    ">2020</a><a href="javascript:;">2021</a></h2>
+                <div class="chart"></div>
                 <div class="panel-footer"></div>
             </div>
             <div class="panel pie">
-                <h2>柱形图-就业行业</h2>
-                <div class="chart">图表</div>
+                <h2>柱形图-年龄分部</h2>
+                <div class="chart"></div>
                 <div class="panel-footer"></div>
             </div>
         </div>
@@ -81,16 +83,16 @@
         </div>
         <div class="colum">
             <div class="panel bar2">
-                <h2>柱形图-就业行业</h2>
+                <h2>柱形图-人口占比</h2>
                 <div class="chart"></div>
                 <div class="panel-footer"></div>
             </div>
-            <div class="panel line1">
-                <h2>柱形图-就业行业</h2>
-                <div class="chart">图表</div>
+            <div class="panel line2">
+                <h2>柱形图-关注量变化</h2>
+                <div class="chart"></div>
                 <div class="panel-footer"></div>
             </div>
-            <div class="panel pie1">
+            <div class="panel pie2">
                 <h2>柱形图-就业行业</h2>
                 <div class="chart">图表</div>
                 <div class="panel-footer"></div>
@@ -100,6 +102,7 @@
     <script src="js/flexible.js"></script>
     <script src="js/echarts.min.js"></script>
     <script src="js/index.js"></script>
+
 </body>
 
 </html>
