--- a/index.html
+++ b/index.html
@@ -101,6 +101,8 @@
     </div>
     <script src="js/flexible.js"></script>
     <script src="js/echarts.min.js"></script>
+    <!-- 必须先引入china.js这个文件 因为中国地图需要 -->
+    <script src="js/china.js"></script>
     <script src="js/index.js"></script>
 
 </body>
